2005-06-16 19:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBInspector.m: Added "revert" call in setObject:

2005-06-14 20:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Fix in [GormDocument translate] to
	properly redisplay the window after translation.

2005-06-12 23:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormOutlineView.m: _handleDoubleClick: now calls 
	NSDebugLog 

2005-06-12 23:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Added GormProtocol.h to the exported headers.

2005-06-12 23:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Modified the data source method
	outlineView:setObjectValue:forItem: to reject outlet/action changes
	when the item and the objectValue are the same.
	* GormCore/GormDocument.m: Changed collectAllObjects to 
	_collectAllObjects, since it is private.
	* GormCore/GormOutlineView.m: In mouseDown: only send to the super
	class under certain conditions.

2005-06-11 14:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Addition of "Translation" submenu as well
	as Load Strings and Export Strings
	* GormCore/GormDocument.h: Declaration of exportStrings
	* GormCore/GormDocument.m: Implementation of exportStrings
	* GormCore/GormProtocol.h: Declaration of app level exportStrings:
	* Gorm.m: Implementation of app level exportStrings: method.

2005-06-11 05:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Improved translate method.
	* Gorm.m: validateMenuItem: add case to handle translate menu.

2005-06-10 07:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Addition of "Translate" menu.
	* GormCore/GormClassInspector.m: Corrected problem in 
	outlet and action data sources in tableView:setObjectValue:
	tableColumn:row:
	* GormCore/GormDocument.h: Added translate method, also added